[package]
name = "autograder_rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of the autograder tool (MVP)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
libc = { version = "0.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
similar = "2.5"
rayon = "1.10"
csv = "1.3"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[[bin]]
name = "grade-rs"
path = "src/main.rs"

[features]
default = ["unix-kill"]
unix-kill = ["libc"]

[lib]
name = "autograder_rust"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"
pushd = "0.0.2"
serial_test = "3.1"
httpmock = "0.7"
assert_cmd = "2.0"
predicates = "3.1"
